Прижал футер к низу страницы, а контент растянул

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   </head>
 
-  <body>
+<body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar py-1">
             <div class="container">
@@ -60,17 +60,16 @@
         </nav>
     </header>
 
-    <main>
-        <div class="container d-flex h-100">
-            <section class="pt-5">
-                <h1 class="mt-5 font-weight-bold text-uppercase">Инжиниринг</h1>
-            </section>
+    <main class="pt-5 ">
+        <div class="container">
+            <h1>dfdsfds</h1>
+           
         </div>
     </main>
 
     <footer class=" page-footer font-small unique-color-dark">
         <div class="container mb-4 text-center text-md-left">
-            <div class="row d-flex align-items-center py-4">
+            <div class="row d-flex align-items-center pt-4">
                 <div class="col-md-12 col-lg-12 col-xl-2 text-md-center my-2">
                     <a href="#">
                         <img src="img/logo.png" height="40" alt="Engeneering">
@@ -89,14 +88,6 @@
         </div>
     </footer>
      
-
-
-
-
-
-
-
-
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
