Сделал ::befor для h2

--- a/equipment.html
+++ b/equipment.html
@@ -60,23 +60,9 @@
         </nav>
     </header>
 
-    <main class="pt-5" id="homepage">
+    <main class="pt-4" id="equipment">
         <div class="container">
-            <h1 class="font-weight-bold text-uppercase">Инжиниринг</h1>
-            <h3 class="font-weight-bold">Техническое решение любой сложности</h3>
-        </div>
-        <div class="grad container-fluid mb-5">
-            <div class="row ">
-                <div class="container font-weight-bold">
-                    <p>Поставка промышленного оборудования для:</p>
-                    <ul class="list-unstyled mb-4">
-                        <li>- Предприятий топливно-энергетического комплекса</li>
-                        <li>- Атомной, авиастроительной и судостроительной острасли</li>
-                        <li>- Испытательных центров, лабораторий и институтов</li>
-                        <li>- Предприятий военно-промышленного комплекса</li>
-                    </ul>
-                </div>
-            </div>
+           <h2 class="font-weight-bold">Оборудование</h2>
         </div>
     </main>
 
