Finish Equipment page

--- a/equipment.html
+++ b/equipment.html
@@ -63,18 +63,18 @@
     <main class="pt-4" id="equipment">
         <div class="container">
            <h2 class="font-weight-bold mb-2">Оборудование</h2>
-           <div class="row mt-5">
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mb-5">
+           <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5">
                 <a href="#" class="view overlay">
-                    <div class="img-wrapper">
+                    <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob1.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4"><p>Компрессорное оборудование</p></div>
                     </div>
                 </a>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mb-5 ">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5  ">
                 <a href="#" class="view overlay">
-                    <div class="img-wrapper">
+                    <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob2.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
                             <p>Очистные сооружения</p>
@@ -82,9 +82,9 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5">
                 <a href="#" class="view overlay">
-                    <div class="img-wrapper">
+                    <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob3.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
                             <p>Котельное оборудование</p>
@@ -92,9 +92,9 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center mt-5 mb-5">
                 <a href="#" class="view overlay">
-                    <div class="img-wrapper">
+                    <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob4.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
                             <p>Измерительное оборудование</p>
@@ -102,11 +102,9 @@
                     </div>
                 </a>
             </div>
-           </div>
-           <div class="row mt-4">
-            <div class="col-lg-3 col-md-4 text-left">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5">
                 <a href="#" class="view overlay">
-                    <div class="img-wrapper">
+                    <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob5.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
                             <p>Колонны и теплообменное оборудование</p>
@@ -114,9 +112,9 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-3 col-md-4 text-left">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5">
                 <a href="#" class="view overlay">
-                    <div class="img-wrapper">
+                    <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob6.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
                             <p>Блочно-</br>модульное оборудование</p>
@@ -124,9 +122,9 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-3 col-md-4 text-left">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5">
                 <a href="#" class="view overlay">
-                    <div class="img-wrapper">
+                    <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob7.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
                             <p>Установки на </br>базе шасси </br>КамАЗ и т.п.</p>
@@ -134,9 +132,9 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-3 col-md-4 text-left">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5">
                 <a href="#" class="view overlay">
-                    <div class="img-wrapper">
+                    <div class="img-wrapper mx-auto">
                         <img width="200px" height="" class="img-fluid" src="img/ob8.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
                             <p>Насосное оборудование</p>
