Create Partners page without background

--- a/partners.html
+++ b/partners.html
@@ -60,9 +60,100 @@
         </nav>
     </header>
 
-    <main class="pt-4" id="partners">
+    <main class="pt-4 drk mb-5" id="partners">
         <div class="container">
            <h2 class="font-weight-bold">Партнеры</h2>
+        <p class="text-white">В число наших партнёров входят проверенные временем компании. </br>Мы работаем со специалистами высочайшего класса в
+            своей
+            области.</p>
+        <p class="text-white pb-4">Мы сотрудничаем:</p>
+        <div class="row align-items-center mb-5 ">
+            <div class="col-md-3">
+                <div class="img-wrapper text-center align-items-center">
+                    <img class="img-fluid my-auto pb-3" width="200px" src="img/bosch.png">
+                </div>
+            </div>
+            <div class="col-md-9">
+                <p>ООО Торговый Дом Бош Москоу индустри наш партнер с 1992 года. Отлично себя зарекомендовал как надежный поставщик оборудования и техники. Проверенное временем немецкое качество и надежность известная на весь мир.</p>
+            </div>
+        </div>
+        <div class="row align-items-center mb-5">
+            <div class="col-md-3">
+                <div class="img-wrapper text-center align-items-center">
+                    <img class="img-fluid my-auto pb-3" width="230px" src="img/vihr.png">
+                </div>
+            </div>
+            <div class="col-md-9">
+                <p>ОАО Компания Вихрь поставщик насосного и электрооборудования. Продукция «Вихрь» производится под контролем опытных инженеров на современных заводах, отвечающих мировым стандартам качества.</p>
+            </div>
+        </div>
+        <div class="row align-items-center mb-5">
+            <div class="col-md-3">
+                <div class="img-wrapper text-center align-items-center">
+                    <img class="img-fluid my-auto pb-3" width="156px" src="img/zubr.png">
+                </div>
+            </div>
+            <div class="col-md-9">
+                <p>ОАО Торговый дом Зубр известный российский производитель и поставщик широкого спектра качественного инструмента,
+                материалов и оборудования пользующегося популярностью у специалистов благодаря высокой надежности и отличной
+                эргономике.</p>
+            </div>
+        </div>
+        <div class="row align-items-center mb-5">
+            <div class="col-md-3">
+                <div class="img-wrapper text-center align-items-center">
+                    <img class="img-fluid my-auto pb-3" width="222px" src="img/husq.png">
+                </div>
+            </div>
+            <div class="col-md-9">
+                <p>ООО Хускварна Групп предлагает профессиональным строителям поддержку, сервисное обслуживание и широкий ассортимент
+                оборудования, объединяя высокую производительность с удобством использования и безопасностью.</p>
+            </div>
+        </div>
+        <div class="row align-items-center mb-5">
+            <div class="col-md-3">
+                <div class="img-wrapper text-center align-items-center">
+                    <img class="img-fluid my-auto pb-3" width="207px" src="img/kraft.png">
+                </div>
+            </div>
+            <div class="col-md-9">
+                <p>ООО Крафтул Раша Групп компани включает в свой асортиментный ряд несколько сотен наименований отверток, бит,
+                столярного, слесарного, измерительного, губцевого, малярного инструмента и других изделий.</p>
+            </div>
+        </div>
+        <div class="row align-items-center mb-5">
+            <div class="col-md-3">
+                <div class="img-wrapper text-center align-items-center">
+                    <img class="img-fluid my-auto pb-3" width="216px" src="img/wurth.png">
+                </div>
+            </div>
+            <div class="col-md-9">
+                <p>ООО Вюрт Лимитед Групп имеет широчайший ассортимент насчитывающий более 100 000 наименований комплектующих и
+                оборудования для монтажа, технического обслуживания и ремонта.</p>
+            </div>
+        </div>
+        <div class="row align-items-center mb-5">
+            <div class="col-md-3">
+                <div class="img-wrapper text-center align-items-center">
+                    <img class="img-fluid my-auto pb-3" width="216px" src="img/mkt.png">
+                </div>
+            </div>
+            <div class="col-md-9">
+                <p>ООО Макита Россия является лидером в области разработки строительных инструментов. Уже 100 лет компания разрабатывает и
+                производит инструменты для работ с деревом, бетоном и другими строительными и промышленными материалами.</p>
+            </div>
+        </div>
+        <div class="row align-items-center mb-5">
+            <div class="col-md-3">
+                <div class="img-wrapper text-center align-items-center">
+                    <img class="img-fluid my-auto pb-3" width="198px" src="img/stihl.png">
+                </div>
+            </div>
+            <div class="col-md-9">
+                <p>ООО Штиль Компани Запад cегодня во всем мире означает высокое качество продукции и обслуживания. Более чем в 160
+                странах мира продукция компании помогает людям в их работе - это сделало STIHL ведущим производителем бензопил в мире.</p>
+            </div>
+        </div>
         </div>
     </main>
 
