--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar py-1">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="img/logo.png" height="40" alt="Engeneering">
                 </a>
         
