Fix error in html code

--- a/docs.html
+++ b/docs.html
@@ -74,15 +74,15 @@
                <div class="col-lg-6 ">
                    <div class="wrap d-flex flex-row mt-5">
                     <div class="item d-flex justify-content-center align-items-center flex-column mx-2">
-                        <div class="img-wrap"><a href="#"><img class="img-fluid" src="img/Ellipse.png"</a></div>
+                        <div class="img-wrap"><a href="#1"><img class="img-fluid" src="img/Ellipse.png"</a></div>
                         <p class="text-white text-center">Скачать <span class="nowrp">реферанс лист</span></p>
                     </div>
                     <div class="item d-flex justify-content-center align-items-center flex-column mx-2">
-                        <div class="img-wrap"><a href="#"><img class="img-fluid" src="img/Ellipse.png" </a> </div>
+                        <div class="img-wrap"><a href="#2"><img class="img-fluid" src="img/Ellipse.png" </a> </div>
                         <p class="text-white text-center">Скачать соглашение с производителем</p>
                     </div>
                     <div class="item d-flex justify-content-center align-items-center flex-column mx-2">
-                        <div class="img-wrap"><a href="#"><img class="img-fluid" src="img/Ellipse.png" </a> </div>
+                        <div class="img-wrap"><a href="#3"><img class="img-fluid" src="img/Ellipse.png" ></a> </div>
                         <p class="text-white text-center">Скачать бланк опросных листов</p>
                     </div>
                    </div>
