--- a/docs.html
+++ b/docs.html
@@ -74,16 +74,16 @@
                <div class="col-lg-6 ">
                    <div class="wrap d-flex flex-row mt-5">
                     <div class="item d-flex justify-content-center align-items-center flex-column mx-2">
-                        <div class="img-wrap"><a href="#1"><img class="img-fluid" src="img/Ellipse.png"</a></div>
-                        <p class="text-white text-center">Скачать <span class="nowrp">реферанс лист</span></p>
+                        <div class="img-wrap"><a href="#1"><img class="img-fluid" src="img/Ellipse.png"></a></div>
+                        <a href="#1"><p class="text-white text-center">Скачать <span class="nowrp">реферанс лист</span></p></a>
                     </div>
                     <div class="item d-flex justify-content-center align-items-center flex-column mx-2">
-                        <div class="img-wrap"><a href="#2"><img class="img-fluid" src="img/Ellipse.png" </a> </div>
-                        <p class="text-white text-center">Скачать соглашение с производителем</p>
+                        <div class="img-wrap"><a href="#2"><img class="img-fluid" src="img/Ellipse.png" ></a> </div>
+                        <a href="#2"><p class="text-white text-center">Скачать соглашение с производителем</p></a>
                     </div>
                     <div class="item d-flex justify-content-center align-items-center flex-column mx-2">
                         <div class="img-wrap"><a href="#3"><img class="img-fluid" src="img/Ellipse.png" ></a> </div>
-                        <p class="text-white text-center">Скачать бланк опросных листов</p>
+                        <a href="#3"><p class="text-white text-center">Скачать бланк опросных листов</p></a>
                     </div>
                    </div>
                </div>
