Create Compress page and fix some errors on other pages

--- a/equipment.html
+++ b/equipment.html
@@ -65,7 +65,7 @@
            <h2 class="font-weight-bold mb-2">Оборудование</h2>
            <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5">
-                <a href="#" class="view overlay">
+                <a href="compress.html" class="view overlay zoom">
                     <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob1.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4"><p>Компрессорное оборудование</p></div>
@@ -73,7 +73,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5  ">
-                <a href="#" class="view overlay">
+                <a href="compress.html" class="view overlay zoom">
                     <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob2.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
@@ -83,7 +83,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5">
-                <a href="#" class="view overlay">
+                <a href="compress.html" class="view overlay zoom">
                     <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob3.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
@@ -93,7 +93,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center mt-5 mb-5">
-                <a href="#" class="view overlay">
+                <a href="compress.html" class="view overlay zoom">
                     <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob4.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
@@ -103,7 +103,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5">
-                <a href="#" class="view overlay">
+                <a href="compress.html" class="view overlay zoom">
                     <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob5.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
@@ -113,7 +113,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5">
-                <a href="#" class="view overlay">
+                <a href="compress.html" class="view overlay zoom">
                     <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob6.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
@@ -123,7 +123,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5">
-                <a href="#" class="view overlay">
+                <a href="compress.html" class="view overlay zoom">
                     <div class="img-wrapper mx-auto">
                         <img width="200px" class="img-fluid" src="img/ob7.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
@@ -133,7 +133,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-left mt-5 mb-5">
-                <a href="#" class="view overlay">
+                <a href="compress.html" class="view overlay zoom">
                     <div class="img-wrapper mx-auto">
                         <img width="200px" height="" class="img-fluid" src="img/ob8.jpg">
                         <div class="tabl font-weight-bold d-flex text-left align-items-center pl-4">
