--- a/partners.html
+++ b/partners.html
@@ -60,7 +60,7 @@
         </nav>
     </header>
 
-    <main class="pt-4 drk mb-5" id="partners">
+    <main class="pt-4 drk pb-5" id="partners">
         <div class="container">
            <h2 class="font-weight-bold">Партнеры</h2>
         <p class="text-white">В число наших партнёров входят проверенные временем компании. </br>Мы работаем со специалистами высочайшего класса в
