--- a/docs.html
+++ b/docs.html
@@ -60,29 +60,36 @@
         </nav>
     </header>
 
-    <main class="pt-4" id="docs" style="background-color: #22293B;">
+    <main class="pt-4" id="docs">
         <div class="container">
            <h2 class="font-weight-bold mb-2 text-white">Документы</h2>
            
            <div class="row mt-3 pb-2 align-items-end">
                <div class="col-lg-6">
                    <p class="zapros mt-4">Отправьте нам запрос </br>и мы обязательно свяжемся с Вами.</p>
-                   <form id="form2">
-                       <a href="contact.html"><button class="mt-3 font-weight-bold">Отправить запрос</button></a>
+                   <form id="form2" class="pt-3">
+                           <a class="button font-weight-bold" href="contact.html">Отправить запрос</a>
+                       
                    </form>
                </div>
                <div class="col-lg-6 ">
                    <div class="wrap d-flex flex-row mt-5">
                     <div class="item d-flex justify-content-center align-items-center flex-column mx-2">
-                        <div class="img-wrap"><a href="#1"><img class="img-fluid" src="img/Ellipse.png"></a></div>
+                        <div class="img-wrap">
+                            <a href="#1"><img class="img-fluid" src="img/Group2.png"></a>
+                        </div>
                         <a href="#1"><p class="text-white text-center">Скачать <span class="nowrp">реферанс лист</span></p></a>
                     </div>
                     <div class="item d-flex justify-content-center align-items-center flex-column mx-2">
-                        <div class="img-wrap"><a href="#2"><img class="img-fluid" src="img/Ellipse.png" ></a> </div>
+                        <div class="img-wrap">
+                            <a href="#2"><img class="img-fluid" src="img/Group1.png" ></a>
+                        </div>
                         <a href="#2"><p class="text-white text-center">Скачать соглашение с производителем</p></a>
                     </div>
                     <div class="item d-flex justify-content-center align-items-center flex-column mx-2">
-                        <div class="img-wrap"><a href="#3"><img class="img-fluid" src="img/Ellipse.png" ></a> </div>
+                        <div class="img-wrap">
+                            <a href="#3"><img class="img-fluid" src="img/Group.png" ></a>
+                        </div>
                         <a href="#3"><p class="text-white text-center">Скачать бланк опросных листов</p></a>
                     </div>
                    </div>
