Finish Compress page

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
         </nav>
     </header>
 
-    <main class="pt-4 drk mb-5 pb-5" id="contact">
+    <main class="pt-4 drk pb-5" id="contact">
         <div class="container">
            <h2 class="font-weight-bold mb-3">Контакты</h2>
             <div class="row">
