--- a/compress.html
+++ b/compress.html
@@ -60,7 +60,7 @@
         </nav>
     </header>
 
-    <main class="pt-4 pb-5" id="compress">
+    <main class="pt-4" id="compress">
         <div class="container">
             <h2 class="font-weight-bold mb-2 text-white">Компрессорное Оборудование</h2>
             <div class="row">
@@ -77,7 +77,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-4 mt-4 mb-3">
-                    <a href="compress.html" class="view overlay zoom">
+                    <a href="#porsh" class="view overlay zoom">
                         <div class="img-wrapper mx-auto">
                             <img class="img-fluid mx-auto" src="img/porshnevoy.jpg">
                             <p class="mt-4 text-center font-weight-bold mx-auto">Поршневые компрессоры</p>
@@ -85,7 +85,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-4 mt-4 mb-3">
-                    <a href="compress.html" class="view overlay zoom">
+                    <a href="#centr" class="view overlay zoom">
                         <div class="img-wrapper mx-auto">
                             <img class="img-fluid mx-auto" src="img/centrobej.jpg">
                             <p class="mt-4 text-center font-weight-bold mx-auto">Центробежные компрессоры</p>
@@ -93,12 +93,70 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-4 mt-4 mb-3">
-                    <a href="compress.html" class="view overlay zoom">
+                    <a href="#rotor" class="view overlay zoom">
                         <div class="img-wrapper mx-auto">
                             <img class="img-fluid mx-auto" src="img/rotor.jpg">
                             <p class="mt-4 text-center font-weight-bold mx-auto">Роторные компрессоры</p>
                         </div>
                     </a>
+                </div>
+            </div>
+            <div id="porsh" class="mt-1">
+                <h5 class="font-weight-bold text-white mb-4 pb-2 pt-2">Поршневые компрессоры</h5>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4">
+                        <img class="img-fluid" src="img/porshnevoy.jpg">
+                    </div>
+                    <div class="col-md-8 col-md-8">
+                        <p class="text-white">Поршневые компрессоры применимы практически во всех сферах промышленности. Многолетний опыт производства поршневых
+                        компрессоров обусловливает их более низкую стоимость по сравнению с другими компрессорами той же производительности. В
+                        поршневом компрессоре воздух или любой другой газ сжимается в цилиндре, в котором движется поршень. Поршневые
+                        компрессоры бывают одностороннего действия, в которых воздух сжимается с одной стороны поршня, и двухсторонние - воздух
+                        сжимается с обеих сторон. Поршневые компрессоры могут быть масляные (смазываемые жидким маслом) и безмасляные (в
+                        качестве смазки выступает графит, фторопласт и пр.). Поршневой компрессор может быть одно- или многоступенчатым,
+                        последний применяется при высоких степенях сжатия. Поршневой компрессор может использоваться как в качестве
+                        атмосферного (воздух сжимается от атмосферного давления), так и бустерного (воздух на вход подается уже под давлением).</p>
+                    </div>
+                </div>
+            </div>
+            <div id="centr" class="mt-4">
+                <h5 class="font-weight-bold text-white mb-4 pb-2 pt-2">Центробежные компрессоры</h5>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4">
+                        <img class="img-fluid" src="img/centrobej.jpg">
+                    </div>
+                    <div class="col-md-8 col-md-8">
+                        <p class="text-white">Данная разновидность компрессоров широко применяется на различных предприятиях. Так мы можем увидеть их применение в
+                        горнорудной промышленности, на центральных компрессорных станциях и в нефтеперерабатывающей. Основные функциональные
+                        части центробежного компрессора: главный корпус, в котором размещены все «внутренности» установки, ротор с валом
+                        расположенным симметрично относительно основных рабочих колес. Разберем данное устройство на примере стандартного
+                        центробежного компрессора с шестью ступенями. Он состоит из трёх секций, между которыми размещены холодильники. Газ из
+                        этих холодильников поступает в специализированные каналы. Что бы создать давление в таких компрессорах, вращательное
+                        движение передается рабочему колесу, на котором закреплены специальные лопатки, создающие герметичные отсеки. В эти
+                        отсеки попадает воздух или другой газ и начинает вращаться вместе с рабочим колесом. Во время вращения колеса на
+                        частицы газа, или воздуха начинают действовать центробежные силы, направляющие газ к оси вращения. Оттуда он
+                        направляется к периферийному устройству колеса. Там же он набирает большой скорости — происходит сжатие. Кольцевой
+                        диффузор позволяет приостановить поток частиц газа, за счет чего происходит переход кинетической энергии в
+                        потенциальную и газ сжимается еще сильнее. И так по всем ступеням сжатия. На этом принципе и построена работа всех
+                        компрессоров данного типа.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="rotor" class="mt-4">
+                <h5 class="font-weight-bold text-white mb-4 pb-2 pt-2">Роторные компрессоры</h5>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4">
+                        <img class="img-fluid" src="img/rotor.jpg">
+                    </div>
+                    <div class="col-md-8 col-md-8">
+                        <p class="text-white">Роторные или ротационные компрессоры имеют один или несколько роторов, которые выпускаются и разрабатываются различных
+                        конструкций. Значительное распространение в современной промышленности получили пластинчато-роторные компрессоры,
+                        которые имеют ротор с пазами, в которые свободно входят рабочие пластины. Принцип работы и устройства роторного и
+                        поршневого компрессоров в основном аналогичны и отличаются только тем, что в поршневом компрессоре все процессы
+                        происходят в определенном месте (рабочем цилиндре), но в разное время (из-за чего потребовалось предусмотреть рабочие
+                        клапаны), а в ротационном компрессоре всасывание и нагнетание газов осуществляются одновременно, но в совершенно
+                        различных местах, разделенных рабочими пластинами ротора.</p>
+                    </div>
                 </div>
             </div>
         </div>
